--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,4 @@ Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 NVIDIALibraries = "455bb3cc-869f-42f8-aad9-fcdd684af481"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
